versioned_docs/version-2026.1.1/professor/kleber_augusto_michalichem.mdx


---
sidebar_label: 'Kleber Augusto Michalichem'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Kleber Augusto Michalichem",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Educação Física III - 1082",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Educação Física I - 457",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2026B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física II - 615",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Educação Física I - 457",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2026A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física II - 2419",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Kleber Augusto Michalichem

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

